fix modal layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,11 @@ tbody > tr:nth-child(even) > th {
 
 /* table modal css  */
 
+.modal-spacing {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .btn-container .submit-btn {
   background-color: #191d3f;
   height: 40px;
@@ -475,9 +480,24 @@ button:not(:disabled) {
 }
 
 /* dashboard css  */
+.wrapper {
+  background-color: #f2f6f8;
+}
 .count-card {
-  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 20px;
-  padding: 40px;
+  height: 100px;
   border: 2px rgb(43, 87, 243, 1);
+  margin: 0px 5px;
+}
+.count-card > div {
+ /* padding-left: 10px; */
+}
+/* product insight title  */
+.product-insight-title {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
 }
